<resources>
    <string name="app_name">Zipp-e</string>
    <string name="Open">OPEN</string>
    <string name="Close">CLOSE</string>
    <string name="hi">HI!\u0020 %1$s</string>
    <string name="disclaimer">By confirming, I accept that this package does not contain any illegal / restricted items (as per The Indian Court of Law). ZIPP-E partner may ask to verify the contents of the package and has the liberty to refuse the delivery if the items are not verified.</string>
    <string-array name="gender_array">
        <item>GENDER</item>
        <item>FEMALE</item>
        <item>MALE</item>
        <item>NON BINARY</item>
    </string-array>
    <string-array name="vehicle_array_sans_zbee">
        <item>VEHICLE TYPE</item>
        <item>E-SCOOTY</item>
        <item>E-BIKE</item>
        <item>E-CYCLE</item>
    </string-array>
    <string-array name="vehicle_array_sans_cycle">
        <item>VEHICLE TYPE</item>
        <item>E-SCOOTY</item>
        <item>E-BIKE</item>
        <item>ZBEE</item>
    </string-array>
    <string-array name="hours_array">
        <item>NO OF HOURS</item>
        <item>1 hr / Rs. 1 per min </item>
        <item>2 hr / Rs. 0.9 per min</item>
        <item>3 hr / Rs. 0.8 per min</item>
        <item>4 hr / Rs. 0.7 per min</item>
        <item>5 hr / Rs. 0.6 per min</item>
        <item>6 hr / Rs. 0.5 per min</item>
        <item>8 hr / Rs. 0.5 per min</item>
        <item>12 hr / Rs. 0.5 per min</item>
        <item>24 hr / Rs. 0.5 per min</item>
    </string-array>
    <string-array name="content_array">
        <item>PACKAGE CONTENTS</item>
        <item>DOCUMENTS / BOOKS</item>
        <item>CLOTHES / ACCESSORIES</item>
        <item>FOOD</item>
        <item>HOUSEHOLD</item>
        <item>ELECTRONICS / ELECTRICAL ITEMS</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="size_array">
        <item>PACKAGE SIZE</item>
        <item>S (35 x 25 x 13 cm)</item>
        <item>M (70 x 50 x 26 cm)</item>
        <item>L (105 x 75 x 39 cm)</item>
        <item>XL (104 x 100 x 52 cm)</item>
        <item>XXL (175 x 125 x 65 cm)</item>
    </string-array>
    <string-array name="rider_no_array">
        <item>NO OF RIDERS</item>
        <item>1</item>
        <item>2</item>
        <item>(1 CHILD UPTO 5 YRS RIDES FREE)</item>
    </string-array>
    <string name="title_activity_maps2" translatable="false">Map</string>
    <string name="rupee" translatable="false">&#8377;</string>
    <string name="qwerty">THIS IS AN APPROXIMATE COST. MAY CHANGE DEPENDING ON RIDE TIME.</string>
    <string name="title_activity_maps_hub" translatable="false">Map</string>
    <string name="_1_hr">1 hr @ ₹ 1.00/min = ₹ 60</string>
    <string name="_2_hr">2 hr @ ₹ 0.90/min = ₹ 108</string>
    <string name="_3_hr">3 hr @ ₹ 0.80/min = ₹ 144</string>
    <string name="_4_hr">4 hr @ ₹ 0.75/min = ₹ 180</string>
    <string name="_5_hr">5 hr @ ₹ 0.70/min = ₹ 210</string>
    <string name="_6_hr">6 hr @ ₹ 0.65/min = ₹ 234</string>
    <string name="_7_hr">7 hr @ ₹ 0.60/min = ₹ 252</string>
    <string name="_8_hr">8 hr @ ₹ 0.55/min = ₹ 264</string>
    <string name="_9_hr">9 hr @ ₹ 0.50/min = ₹ 270</string>
    <string name="_10_hr">10 hr @ ₹ 0.50/min = ₹ 300</string>
    <string name="_11_hr">11 hr @ ₹ 0.50/min = ₹ 330</string>
    <string name="_12_hr">12 hr @ ₹ 0.50/min = ₹ 360</string>
    <string name="are_you_ready_to_confirm_your_delivery">Are you ready to confirm \nyour delivery?</string>
    <string name="delivery_charge">delivery charge</string>
    <string name="rs">₹</string>
    <string name="thank_your_agent">Thank your agent</string>
    <string name="enter_tip">Enter Tip</string>
    <string name="colon">:</string>
    <string name="please_make_payment_to_nconfirm_your_delivery">Please choose payment mode to \nconfirm your delivery</string>
    <string name="please_pay">Please Pay \u0020</string>
    <string name="make_payment_using_upi">pay now using upi</string>
    <string name="pay_on_delivery">pay on delivery</string>
    <string name="cash_on_pickup">pay by cash on pickup</string>
    <string name="your_agent_will_be_assigned_shortly_please_keep_you_your_package_ready_nthank_you_for_choosing">Your agent will be assigned shortly. Please keep you your package ready.</string>
    <string name="thank_you_for_choosing">Thank you for choosing</string>
    <string name="to_view_your_order">to view your order</string>
    <string name="click_here">click here</string>
    <string name="delivery_status">delivery status</string>
    <string name="track_your_delivery">Track your delivery</string>
    <string name="review_your_delivery_before_confirming">Kindly confirm your delivery details</string>
    <string name="pickup_point_details">Pickup Point Details</string>
    <string name="drop_point_details">Drop Point Details</string>
    <string name="package_details">Package Details</string>
    <string name="price_breakup">Price Breakup</string>
    <string name="time_slot">Time Slot</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="ride_price">Price</string>
    <string name="ride_rate">Rate</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="ride_tax">Tax</string>
    <string name="trip">Trip</string>
    <string name="pick_up_date">Pick Up Date</string>
    <string name="date">Date</string>
    <string name="ride_total">Total</string>
    <string name="delivery_summary">Delivery Summary</string>
    <string name="ride_summary">Ride Summary</string>
    <string name="rent_summary">Rent Summary</string>
    <string name="choose_delivery_type">Choose Delivery Type</string>
    <string name="express">Express</string>
    <string name="standard">Standard</string>
    <string name="additional_details_optional">Additional details (optional)</string>
    <string name="click_to_choose">click to choose</string>
    <string name="drop_details">Drop Details</string>
    <string name="delivery">Delivery</string>
    <string name="eg_beware_of_dogs">eg. Beware of Dogs</string>
    <string name="enter_pin_code">ENTER PIN CODE</string>
    <string name="landmark">LANDMARK</string>
    <string name="_name">NAME</string>
    <string name="_mobile">MOBILE</string>
    <string name="receiver_name">RECEIVER NAME</string>
    <string name="receiver_mobile">RECEIVER MOBILE</string>
    <string name="if_our_agent_finds_that_your_area_is_not_serviceable_by_road_you_will_be_asked_to_pick_your_delivery_from_a_hub">If our agent finds that your area is not serviceable by road, you will be asked to pick your delivery from a hub.</string>
    <string name="your_name">SENDER NAME</string>
    <string name="your_mobile">SENDER MOBILE</string>
    <string name="if_our_agent_finds_that_your_area_is_not_serviceable_by_road_you_will_be_asked_to_drop_your_delivery_at_a_hub">If our delivery agent finds that your area is not serviceable by road, you will be asked to drop your package at a hub.</string>
    <string name="enter_mobile">ENTER MOBILE</string>
    <string name="request_otp">request otp</string>
    <string name="enter_otp_to_verify">ENTER OTP TO VERIFY</string>
    <string name="upload_aadhar_front">upload aadhar front</string>
    <string name="upload_aadhar_back">upload aadhar back</string>
    <string name="next">NEXT</string>
    <string name="i_agree_to_terms_amp_conditions"><![CDATA[I HAVE READ THE ]]></string>
    <string name="pinch_to_zoom">Pinch to zoom</string>
    <string name="please_go_to_the_nearest_drop_point_to_end_your_rental">please go to the nearest drop point to end your rental</string>
    <string name="km">km</string>
    <string name="care_instructions">Care Instructions</string>
    <string name="pick_up_details">PICK-UP DETAILS</string>
    <string name="express_delivery">Express Delivery</string>
    <string name="standard_delivery">Standard Delivery</string>
    <string name="your_rental_time_is_over_nwith">your rental time is over\nwith</string>
    <string name="pick_up_point_z_hub">PICK-UP POINT / Z-HUB</string>
    <string name="drop_point_z_hub">DROP POINT / Z-HUB</string>
    <string name="no_of_hours">NO. OF HOURS</string>
    <string name="schedule_rental">Schedule rental</string>
    <string name="enjoy_your_trip">Enjoy your trip</string>
    <string name="drop_point_contact">Drop point details</string>
    <string name="veh_no">VEH. NO. :</string>
    <string name="remaining_mins">REMAINING MINS :</string>
    <string name="emergency_support">emergency support</string>
    <string name="extend_no_of_hours">Extend no. of Hours</string>
    <string name="your_rental_is_nconfirmed">your rental is \nconfirmed</string>
    <string name="pick_point_contact">Pick-up point details</string>
    <string name="vehicle">Vehicle</string>
    <string name="otp">OTP :</string>
    <string name="pick_point">Pick-up  point</string>
    <string name="drop_point">Drop point</string>
    <string name="vehicle_speed">VEHICLE SPEED</string>
    <string name="pick_hub">pick hub</string>
    <string name="drop_hub">DROP HUB</string>
    <string name="you_have_reached_your_ndestination_with">you have reached your \ndestination with</string>
    <string name="cash">cash</string>
    <string name="upi">upi</string>
    <string name="let_s_get_you_a_nride">let\'s get you a \nride</string>
    <string name="vehicle_type">VEHICLE TYPE</string>
    <string name="no_of_riders">NO. OF RIDERS</string>
    <string name="enjoy_your_ride_nwith">Enjoy your ride\nwith</string>
    <string name="ride_otp">Ride OTP</string>
    <string name="track_your_ride">track your ride</string>
    <string name="share_ride_details">share ride details</string>
    <string name="share_live_location">share live location</string>
    <string name="your_ride_is_confirmed_nwith">your ride is confirmed \nwith</string>
    <string name="ride_time">ride time</string>
    <string name="min">\u0020min</string>
    <string name="cost_estimate">cost estimate</string>
    <string name="driver_arriving_in">driver arriving in</string>
    <string name="mins">mins</string>
    <string name="disclaimer_delay_due_to_traffic_can_occur">Disclaimer: Delay due to traffic can occur.</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="thank_you_for_nriding_with_zippe">THANK YOU FOR \nRIDING WITH ZIPPE</string>
    <string name="please_note">PLEASE NOTE</string>
    <string name="delivery_order_no">Delivery Item</string>
    <string name="gender">GENDER</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="non_binary">NON BINARY</string>
    <string name="fragile_breakable">FRAGILE / BREAKABLE</string>
    <string name="contains_liquid">CONTAINS LIQUID</string>
    <string name="perishable">PERISHABLE</string>
    <string name="keep_cold">KEEP COLD</string>
    <string name="keep_warm">KEEP WARM</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="choose_rental_package">Choose rental package</string>
    <string name="_2_4_hr_rental_ride_up_to_40km">2–4 hr rental : ride up to 40km</string>
    <string name="_6_8_hr_rental_ride_up_to_80km">6–8 hr rental : ride up to 80km</string>
    <string name="charge_vehicle_upon_exceeding_80km">Charge vehicle upon exceeding 80km</string>
    <string name="log_out">LOG OUT</string>
    <string name="profile">PROFILE</string>
    <string name="home">HOME</string>
    <string name="delivery_orders">Delivery Orders</string>
    <string name="ride_history">RIDE HISTORY</string>
    <string name="terms_and_conditions">TERMS AND CONDITIONS</string>
    <string name="state">HOME STATE</string>
    <string name="uttarakhand">UTTARAKHAND</string>
    <string name="rajasthan">RAJASTHAN</string>
    <string name="itype">iType</string>
    <string name="price">price</string>
    <string name="status">status</string>
    <string name="id">id</string>
</resources>