<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSpinnerBck"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/female"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/male"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/non_binary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/non_binary"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="23sp" />


</LinearLayout>