<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="21dp"
    android:layout_marginEnd="21dp"
    android:background="@drawable/rect_box_outline"
    android:backgroundTint="#ffffff"
    android:orientation="vertical"
    android:paddingStart="2dp"
    android:paddingEnd="2dp">

    <TextView
        android:id="@+id/txt_head"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/care_instructions"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000"
        android:textSize="18sp" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/breakable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="BREAKABLE"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/fragile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/fragile_breakable"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/liquid"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/contains_liquid"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/perishable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/perishable"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/cold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/keep_cold"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/warm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/keep_warm"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <CheckBox
            android:id="@+id/non_of_the_above"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:buttonTint="@color/colorAccent"
            android:checked="false"
            android:text="@string/none_of_the_above"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7E7574">

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />
</LinearLayout>