<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:padding="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/delText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/delivery_order_no"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/delivery_itype"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/itype"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/delText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/delivery_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:text="@string/price"
                android:textAllCaps="true"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/delivery_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="23sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/delivery_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/id"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="23sp"
            android:visibility="gone" />

    </LinearLayout>

</androidx.cardview.widget.CardView>